# p4_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/p4_ros/: p4_helper.h  services.h  time_optimizer_class.h  trapezoidal.h  visualization_functions.h
launch/: launch_services.launch
launch/rviz_config/: time_optimizer.rviz
src/: p4_client_example.cpp  p4_helper.cpp  p4_services_node.cpp  services.cpp  time_optimizer_class.cpp  trapezoidal.cpp  visualization_functions.cpp
srv/: minAccXYWpPVA.srv  min_time.srv
